bk_ida/gccida/g1/noce_emit_move_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_emit_move_insn/src/ifcvt.c:1035:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_emit_move_insn/src/ifcvt.c:1040:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v2.rtwint + 2), 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_emit_move_insn/src/obj/ifcvt.o] Error 1
